# Manalter

./: .back_spell.cpp  .back_spell.hpp  .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.md  backup_particle.skibidi  build-web.sh  circle.jl  clang_config.sh  effect_demo.jl  flake.nix  raylib.patch  shell.html  test.jl  test.lua
assets/: floor.fs.glsl  floor.vs.glsl  fxaa.glsl  grass.fs.glsl  grass.vs.glsl  particles.fs.glsl  particles.vs.glsl  skinning.vs.glsl  world.glb
assets/Macondo/: url
assets/player/: player.glb
back/: depth_vertex.spv  model_fragment.spv  model_vertex.spv  model_vertex2.spv
ecs/: CMakeLists.txt  ecs.hpp  ecs.test.cpp  ecs_demo.cpp  multiarray.hpp  typeset.hpp
engine/: CMakeLists.txt  camera.hpp  depth_vertex.glsl  descriptor_pool.cpp  descriptor_pool_.hpp  ecs.cpp  ecs_c.hpp  engine.cpp  engine_.hpp  engine_demo.cpp  event.cpp  events.cpp  fragment.glsl  gpu.cpp  gpu_c.hpp  imgui.cpp  imgui_.hpp  input.cpp  main.cpp  model.cpp  model_c.hpp  model_fragment.glsl  model_vertex.glsl  pipeline.cpp  pipeline_c.hpp  shader.cpp  test_fragment.glsl  test_vertex.glsl  texture.cpp  transport.cpp  transport_.hpp  util_c.hpp  window_c.hpp
engine/include/engine/: buffer.hpp  collisions.hpp  config.hpp  descriptor_pool.hpp  engine.hpp  event.hpp  gpu.hpp  imgui.hpp  input.hpp  model.hpp  pipeline.hpp  shader.hpp  transport.hpp  util.hpp  window.hpp
engine_sdl3/: CMakeLists.txt  camera.cpp  depth_vertex.glsl  engine.cpp  imgui.cpp  imgui_c.hpp  light_fragment.glsl  light_vertex.glsl  model_c.hpp  model_vertex.glsl  model_vertex2.glsl  shader_c.hpp  texture_c.hpp  vertex.glsl  window.cpp
engine_sdl3/include/engine/: blend.hpp  buffer.hpp  camera.hpp  engine.hpp  events.hpp  model.hpp  pipeline.hpp  texture.hpp
glad/: CMakeLists.txt
julip/: CMakeLists.txt  julip.cpp  julip.hpp  julip_demo.cpp
mote/: CMakeLists.txt  mote_demo.cpp
particle/: CMakeLists.txt  effect_demo.jl  effects.cpp  effects.hpp  particle.cpp  particle.hpp  particle_system.cpp
render_test/: CMakeLists.txt  camera.hpp  cube_vertex.glsl  fragment.glsl  input.hpp  main.cpp  mesh.hpp  render.hpp  vertex.glsl
src/: CMakeLists.txt  assets.cpp  assets.hpp  effects.cpp  effects.hpp  enemies.cpp  enemies.hpp  enemies_spawner.cpp  enemies_spawner.hpp  font.cpp  font.hpp  glad.h  hitbox.cpp  hitbox.hpp  hitbox_demo.cpp  input.cpp  input.hpp  item_drops.cpp  item_drops.hpp  loop.cpp  loop.hpp  loop_wrapper.cpp  loop_wrapper.hpp  main.cpp  model_render.hpp  particle_system.cpp  particle_system.hpp  particle_system_demo.cpp  player.cpp  player.hpp  playground.cpp  power_up.cpp  power_up.hpp  quadtree.cpp  quadtree.hpp  quadtree_demo.cpp  rayhacks.cpp  rayhacks.hpp  ringbuffer.cpp  ringbuffer.hpp  (+12 more)
test/: CMakeLists.txt  enemy_spawner.t.cpp  hitbox.t.cpp  ringbuffer.t.cpp  seria_deser.t.cpp
vulkan_test/: CMakeLists.txt  fragment.glsl  main.cpp  vertex.glsl
web-build/: game.html  game.js  game.wasm
